# memahead

./: .env.example  .gitignore  CONTEXT.md  LICENSE  NOTICE  PROJECT_STATUS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  run_benchmark.py  tokens.py
benchmarks/baselines/: __init__.py  headroom_only.py  no_compression.py
benchmarks/quality/: __init__.py  scorer.py
benchmarks/results/: README.md
benchmarks/workflows/: __init__.py  _verbose.py  code_review.py  data_analysis.py  research_synthesis.py
examples/: basic_workflow.py  budget_workflow.py  langgraph_workflow.py
memahead/: __init__.py  _embeddings.py  compressor.py  context.py  plan.py  scorer.py  tool_filter.py
memahead/integrations/: __init__.py  langgraph.py
tests/: conftest.py  test_benchmarks.py  test_compressor.py  test_langgraph_integration.py  test_plan.py  test_scorer.py  test_tool_filter.py
